// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortModalDropdown Test should render correctly 1`] = `
<View>
  <Styled(TouchableOpacity) />
  <Component
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <TouchableOpacity
      accessibilityLabel="Tap to close it"
      accessibilityRole="none"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      style={
        Object {
          "height": 1334,
          "left": 0,
        }
      }
    >
      <Styled(View)
        style={
          Object {
            "top": 0,
            "width": 0,
          }
        }
      >
        <Styled(FlatList)
          ItemSeparatorComponent={[Function]}
          bounces={true}
          data={
            Array [
              Object {
                "label": "foo",
                "value": "foo",
              },
            ]
          }
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            Object {
              "height": 0,
            }
          }
        />
      </Styled(View)>
    </TouchableOpacity>
  </Component>
</View>
`;

exports[`SortModalDropdown Test should render with dropdown open state 1`] = `
<View>
  <Styled(TouchableOpacity) />
  <Component
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <TouchableOpacity
      accessibilityLabel="Tap to close it"
      accessibilityRole="none"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      style={
        Object {
          "height": 1334,
          "left": 0,
        }
      }
    >
      <Styled(View)
        style={
          Object {
            "top": 0,
            "width": 0,
          }
        }
      >
        <Styled(FlatList)
          ItemSeparatorComponent={[Function]}
          bounces={true}
          data={
            Array [
              Object {
                "label": "foo",
                "value": "foo",
              },
            ]
          }
          keyExtractor={[Function]}
          renderItem={[Function]}
          style={
            Object {
              "height": 0,
            }
          }
        />
      </Styled(View)>
    </TouchableOpacity>
  </Component>
</View>
`;
